--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 
+	<link rel="manifest" href="assets/manifest.json">
 	<link rel="icon" type="image/png" href="assets/favicon.png" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400|
 	Material+Icons" rel="stylesheet">
