--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,15 @@
 
 	<app></app>
 
+	<script>
+		if ('serviceWorker' in navigator) {
+			navigator.serviceWorker.register('./service-worker.js').then(function(registration) {
+				console.log('Service Worker registered');
+			}).catch(function(err) {
+				console.log('Service Worker registration failed: ', err);
+			});
+		}
+	</script>
+
 </body>
 </html>
